--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,90 @@
 /* add css for index.html */
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');
+
+#designer-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input, select, textarea {
+    width: 30%;
+    padding: 8px;
+    margin-top: 10px;
+    margin-bottom: 24px; 
+
+}
+
+#city-section {
+    margin: 0 auto;
+    height: 360px;
+    width: 40%;
+    border: 2px solid black;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+#city-image-container {
+    margin: 0 auto;
+    width: 80%;
+    height: 200px;
+    position: relative;
+    top: 50px;
+    display: flex;
+    gap: 20px;
+}
+
+table {
+    margin: 60px auto;
+    border: 1px solid black;
+}
+
+thead {
+    border: 1px solid black;
+}
+
+td {
+    padding: 10px;
+}
+
+/* environment classes */
+.polar {
+    background-color: lightblue;
+    border: 4px solid darkblue;
+    color: gold
+}
+
+.desert {
+    background-color: goldenrod;
+    border: 4px solid skyblue;
+    color: black;
+}
+
+.mountains {
+    background-color: antiquewhite;
+    border: 4px solid brown;
+    color: darkgreen;
+}
+
+.tropical {
+    background-color: rgb(133, 222, 0);
+    border: 4px solid darkgreen;
+    color: darkgoldenrod;
+}
+
+/* architecture classes */
+.gothic {
+    font-family: cursive;
+}
+
+.deco {
+    font-family: sans-serif;
+}
+
+.beaux {
+    font-family: serif;
+}
+
+.modern {
+    font-family: 'Cinzel Decorative';
+}
